# vox

./: .gitignore  Cargo.toml  LINUX_README.md  README.md  build_and_install.sh  config.toml  create_app_bundle.sh  icon.icns  install_linux.sh  models.json  overlay.py  parakeet.py  stop_clevernote.sh  stop_vox.sh
install/hyprland/: clevernote.conf  vox.conf
install/sway/: clevernote.conf  vox.conf
install/systemd/: clevernote-daemon.service  vox-daemon.service
src/: audio.rs  clipboard.rs  inject_linux.rs  ipc.rs  lib.rs  main.rs  model_downloader.rs  progress_window.rs  recording_overlay.rs
src/models/: downloader.rs  mod.rs  registry.rs
src/models/backends/: audio.rs  factory.rs  gemma.rs  gemma3.rs  gguf.rs  granite.rs  llm.rs  mod.rs  moonshine.rs  parakeet.rs  qwen3.rs  sensevoice.rs  tokenizers.rs  whisper.rs  whisper_decoder_layers.rs
