[package]
name = "parakeet-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parakeet"
path = "src/main.rs"

[dependencies]
parakeet-rs = { path = "../parakeet-rs" }
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
enigo = "0.2"
global-hotkey = "0.7"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tao = { version = "0.34.5", default-features = false }
tray-icon = "0.19"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["cpu"]
cpu = []
cuda = ["parakeet-rs/cuda"]
tensorrt = ["parakeet-rs/tensorrt"]
coreml = ["parakeet-rs/coreml"]
directml = ["parakeet-rs/directml"]
rocm = ["parakeet-rs/rocm"]
openvino = ["parakeet-rs/openvino"]
webgpu = ["parakeet-rs/webgpu"]

